kube/kube.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snapp-app
  namespace: snapp
  labels:
    app: snapp-app
spec:
  replicas: 1
  revisionHistoryLimit: 10
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  selector:
    matchLabels:
      app: snapp-app
  template:
    metadata:
      labels:
        app: snapp-app
    spec:
      containers:
        - name: snap-demo
          image: registry.devopsco.space:5000/snapp/snapp-app:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "250m"
              memory: "400Mi"
            limits:
              cpu: "350m"
              memory: "450Mi"
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            failureThreshold: 30
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: snapp-app-svc
  namespace: snapp
  labels:
    app: snapp-app-svc
spec:
  selector:
    app: snapp-app
  ports:
    - port: 8080
      protocol: TCP
