kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: snapp
  annotations:
    kubernetes.io/spec.ingressClassName: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
spec:
  rules:
    - host: app.devopsco.space
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: snapp-app-svc
              port:
                number: 8080
